--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>developer portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <section class="container">
+    <div class="half-width">
+      <h1>welcome to</h1>
+      <h1> <span class="orange">jhankar mahbub</span> world</h1>
+      <h3>jhankar amhbub is very skillfull man </h3>
+      <p>assalamu alaikum madrasha abu huraira radiyallahu anhu kishorganj bangladesh allama rahmatulah shaheb abdus
+        subhan tamim bismillah allahu akbar subhanallah</p>
+      <a href="www.facebook.com">ADD ME </a>
+    </div>
+    <div class="half-width">
+      <img src="images/jhankar.png" alt="">
+    </div>
 
+  </section>
 </body>
 
 </html>
