--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     </div>
 
   </section>
+  <section class="container2">
+    <div class="half">
+      <img src="images/jhankar2.png" alt="">
+    </div>
+    <div class="half">
+      <h2>dream big </h2>
+      <h4>become a web developer</h4>
+      <p>assalamu alaikum i am a web developer .i am baby web developer i can creat websie in 30 minutes keep me in
+        yours prays inshallah i want to be dear from allah subhanallah allahu akbar</p>
+      <a href="www.facebook.com">DOWNLOAD MY DESUME</a>
+    </div>
+  </section>
 </body>
 
 </html>
