--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
       <a href="www.facebook.com">DOWNLOAD MY DESUME</a>
     </div>
   </section>
+  
+  <section class="container3">
+    <h1>experience</h1>
+    <div class="half2">
+      <h1>profasional web developer</h1>
+      <h3>assalamu alaikum </h3>
+      <p>assalamu alaikm warahmatullah suhanallah allhu akbar i am a baby web developer i will become a web ddvloper in
+        2022 inshallah .allahu kbar .subhanallah alhamdulullah</p>
+    </div>
+    <div class="half2">
+      <h1>baby web developer </h1>
+      <h3>assalamu alaikum </h3>
+      <p>assalamualaikum warahmatullah lsptop innanillah assalamu alaikm jhankar mahbub is a very honest man he is a web
+        developer he lives in california america afganistan allahmdulillah taliban is winer solder</p>
+    </div>
+  </section>
 </body>
 
 </html>
